trying to change the shape of profile

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
     <title>IRON CV</title>
     <script type="text/javascript">
       function adustTextarea(){
-          var textarea = document.getElementById("textarea");
-          if( textarea.scrollHeight > textarea.offsetHeight ){
-                    textarea.style.height = textarea.scrollHeight+'px';
-          }
+          // var textarea = document.getElementById("textarea");
+          // if( textarea.scrollHeight > textarea.offsetHeight ){
+          //           textarea.style.height = textarea.scrollHeight+'px';
+          // }
       }
     </script>
   </head>
